Update logo image source in index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- this is the start of content -->
     <header>
       <img
-        src="https://cdn.glitch.global/573e840d-99a9-4f37-90b9-1561ef294a9e/Fandom_logo_2021.webp?v=1663737065261"
+        src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ce/Fandom.svg/1280px-Fandom.svg.png"
         alt="fandom logo"
         width="618"
         height="155"
@@ -58,3 +58,4 @@
     </footer>
   </body>
 </html>
+
